# llm-stream-collector

./: README.md  pyproject.toml
src/llm_stream_collector/: __init__.py  collector.py
tests/: test_collector.py
